--- a/_sass/components/_search.scss
+++ b/_sass/components/_search.scss
@@ -6,12 +6,12 @@
   }
 
   .url {
-    color: silver;
+    color: #767676;
   }
 
   a {
     display: block;
-    color: #777;
+    color: #707070;
 
     &:hover,
     &:focus {
