--- a/_sass/components/_share.scss
+++ b/_sass/components/_share.scss
@@ -2,12 +2,12 @@
 
 .share {
   text-align: center;
-  color: rgba(0, 0, 0, 0.44);
-  fill: rgba(0, 0, 0, 0.44);
+  color: rgba(0, 0, 0, 0.55);
+  fill: rgba(0, 0, 0, 0.55);
 
   a {
-    color: rgba(0, 0, 0, 0.44);
-    fill: rgba(0, 0, 0, 0.44);
+    color: rgba(0, 0, 0, 0.55);
+    fill: rgba(0, 0, 0, 0.55);
   }
 
   p {
