--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -29,7 +29,7 @@ section.recent-posts {
   }
 
   span {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.44);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.55);
     display: inline-block;
     padding-bottom: 20px;
     margin-bottom: -1px;
