--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -112,5 +112,5 @@
 
 .timeline-date {
   font-size: 0.85rem;
-  color: rgba(0, 0, 0, 0.44);
+  color: rgba(0, 0, 0, 0.55);
 }
