--- a/_sass/pages/_goodreads.scss
+++ b/_sass/pages/_goodreads.scss
@@ -67,5 +67,5 @@ div[class^="gr_custom_review_"] {
 
 .goodreads-follow {
   font-size: 0.8rem;
-  color: rgba(0, 0, 0, 0.44);
+  color: rgba(0, 0, 0, 0.55);
 }
